# hvor-er-damene

./: .gitignore  README.md  aggregate.py  data_clean.py  funksjoner.py  initialize.sh  kakediagram.py  kilder.md  monthly_snapshot.py  monthly_snapshot_hist.py  pyproject.toml  requirements.txt  schema.json
.github/workflows/: sync-gcs-bucket.yaml
analyse_team/: team_gender.sql  teamsammensetning.py
analyse_team/ddl/: teamkatalogen.sql
dags/: airflow-readyness-gh.py  monthly_snapshot_run.py  monthly_update.py  monthly_update_bq_tables.py
dags/scripts/: monthly_snapshot.py
navn/: female_names.txt  male_names.txt
pp_charts/: andre_bedrifter.py  bucket_functions.py  combined_plot.py  ikt_so_chart.py  kakediagram.py  requirements.txt  ssb_plot.py  undersøkelse.py
quarto/: make_dashboard.qmd  make_plots.py  publish_story.py  rekruttering.py  ssb_plots.py
teamkatalogen-bq/: monthly_snapshot.py  schema.json
teamkatalogen_bq/: agg_funksjoner.py  aggregate.py  data_clean.py  monthly_snapshot.py  process_snapshot.py
