[tool.poetry]
name = "teamkat-hist"
version = "0.1.0"
description = ""
authors = ["caroliwi <caroline.winther@nav.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
google-auth = "^2.29.0"
google-cloud-bigquery = "^3.20.1"
google-cloud-secret-manager = "^2.19.0"
pyarrow = "^15.0.2"
db-dtypes = "^1.2.0"
plotly = "^5.20.0"
jupyter = "^1.0.0"
pyjstat = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
