[tool.poetry]
name = "teamkat-hist"
version = "0.1.0"
description = ""
authors = ["caroliwi <caroline.winther@nav.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
google-auth = "^2.29.0"
google-cloud-bigquery = "^3.20.1"
google-cloud-secret-manager = "^2.19.0"
pyarrow = "^15.0.2"
db-dtypes = "^1.2.0"
plotly = "^5.20.0"
jupyter = "^1.0.0"
pyjstat = "^2.4.0"
requests = "^2.31.0"
ndg-httpsclient = "^0.5.1"
pyopenssl = "^24.1.0"
pyasn1 = "^0.6.0"
openpyxl = "^3.1.2"
plotly-express = "^0.4.1"
google-cloud-storage = "^2.18.0"
kaleido = "0.2.1"
gender-guesser = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
